--- a/Index_Menu.html
+++ b/Index_Menu.html
@@ -8,7 +8,7 @@
 		<title> Animal Expirement - Menu </title>
 	</head>
 	<body>
-		<p id="title">Animal Expirement menu </p>
+		<p id="title">MENU </p>
 		<div class="menu-object">
 			
 			<button class="menu-object"  onclick="phaser_game()" > 
