--- a/Index_Menu.html
+++ b/Index_Menu.html
@@ -4,7 +4,7 @@
 		<link rel="stylesheet" href="main.css">
 		<script src="./js/loader.js"></script>
 		<script src="./js/game_info.js"></script>
-		<script src="./js/menu_controller.js"></script>
+		<script src="/menu_controller.js"></script>
 		<title> Animal Expirement - Menu </title>
 	</head>
 	<body>
