--- a/Index_Menu.html
+++ b/Index_Menu.html
@@ -2,12 +2,12 @@
 <html>
 	<head>
 		<link rel="stylesheet" href="main.css">
-		<script src="./js/loader.js"></script>
-		<script src="./js/game_info.js"></script>
+		<script src="/loader.js"></script>
+		<script src="/game_info.js"></script>
 		<script src="/menu_controller.js"></script>
 		<title> Animal Expirement - Menu </title>
 	</head>
-	<body>
+	<body>  
 		<p id="title">MENU </p>
 		<div class="menu-object">
 			
