--- a/index.html
+++ b/index.html
@@ -9,6 +9,11 @@
   
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   
+  <link rel="stylesheet" href="./styles/main.css">
+  <script src="./game.js"></script>
+  <script src="./loader.js"></script>
+
+
   <title>escenario1</title>
 
 </head>
@@ -17,7 +22,8 @@
 
   <script src="//cdn.jsdelivr.net/npm/phaser@3.24.0/dist/phaser.js"></script>
   <script src="index.js" type="module"></script>
+  
 
-
+  
 </body>
 </html>
