--- a/menu_pausa.html
+++ b/menu_pausa.html
@@ -8,7 +8,7 @@
 	</head>
 	<body>
 		<p class="menu-object" id="title">JUEGO EN PAUSA</p>
-		<input type="image" class="menu-object" src="./images/resume.png" onclick="resume_game()">
+		<input type="image" class="menu-object" src="./images/resume_game.png" onclick="resume_game()">
         <input type="image" class="menu-object" src="./images/exit.png" onclick="salir()">
         
 	</body>
