--- a/menu_pausa.html
+++ b/menu_pausa.html
@@ -7,7 +7,7 @@
 		<title> Menu Pausa </title>
 	</head>
 	<body>
-		<p class="menu-object" id="title">JUEGO EN PAUSA</p>
+		<p  id="title">JUEGO EN PAUSA</p>
 		<input type="image" class="menu-object" src="./images/resume_game.png" onclick="resume_game()">
         <input type="image" class="menu-object" src="./images/exit.png" onclick="salir()">
         
