--- a/html/option.html
+++ b/html/option.html
@@ -2,7 +2,7 @@
 <html>
 	<head>
 		<link rel="stylesheet" href="/main.css">
-		<script src="/loader.js"></script>
+		<script src="/js/loader.js"></script>
 		<title> My first game - Options </title>
 	</head>
 	<body>
@@ -12,7 +12,7 @@
 				<p class = "menu-word">Dificulty:</p>
 				<input type="radio" id="easy" value="easy" v-model="dificulty" checked>
 				<label for="easy">Easy</label>
-				<input type="radio" id="normal" value="normal" v-model="dificulty">
+				<input type="radio" id="normal" value="normal" v-model="dificulty" >
 				<label for="normal">Normal</label>
 				<input type="radio" id="hard" value="hard" v-model="dificulty" >
 				<label for="hard">Hard</label>
