--- a/Index_Menu.html
+++ b/Index_Menu.html
@@ -15,7 +15,7 @@
 			
 			
 			<button class="menu-object"  onclick="phaser_game()" > 
-			 	 
+			 	 loadpage("");
 			</button>
 			<button class="menu-object" onclick="puntuaciones()"> 
 				
