--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   
   <link rel="stylesheet" href="./styles/main.css">
-  <script src="./game.js"></script>
-  <script src="./loader.js"></script>
+  <script src="./js/game.js"></script>
+  <script src="./js/loader.js"></script>
 
 
   <title>Escenario 1</title>
@@ -21,7 +21,7 @@
 <body>
 
   <script src="//cdn.jsdelivr.net/npm/phaser@3.24.0/dist/phaser.js"></script>
-  <script src="index.js" type="module"></script>
+  <script src="./js/index.js" type="module"></script>
   
 
   
