--- a/menu_pausa.html
+++ b/menu_pausa.html
@@ -2,8 +2,8 @@
 <html>
 	<head>
 		<link rel="stylesheet" href="./styles/pausa_style.css">
-		<script src="./menu_pausa.js"></script>
-        <script src="./loader.js"></script>
+		<script src="./js/menu_pausa.js"></script>
+        <script src="./js/loader.js"></script>
 		<title> Menu Pausa </title>
 	</head>
 	<body>
