--- a/html/option.html
+++ b/html/option.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html> 
 <html>
 	<head>
-		<link rel="stylesheet" href="/main.css">
+		<link rel="stylesheet" href="/main2.css">
 		<script src="/js/loader.js"></script>
 		<title> My first game - Options </title>
 	</head>
@@ -17,7 +17,7 @@
 				<input type="radio" id="hard" value="hard" v-model="dificulty" >
 				<label for="hard">Hard</label>
 			</div>
-            <div class ="menu-boton">
+            <div class ="menu-botones">
                 <button class ="menu-boton" v-on:click="save"> Save </button>
 			    <button  class ="menu-boton" v-on:click="discard"> Discard </button>
             </div>
