--- a/html/option.html
+++ b/html/option.html
@@ -25,5 +25,5 @@
 		</div>
 	</body>
 	<script src="https://cdn.jsdelivr.net/npm/vue@2.6.14"></script>
-	<script src="/option.js"></script>
+	<script src="../js/option.js"></script>
 </html>
