--- a/html/phaser.html
+++ b/html/phaser.html
@@ -15,7 +15,7 @@
   <body>
 
     <script src="//cdn.jsdelivr.net/npm/phaser@3.24.0/dist/phaser.js"></script>
-    <script src="./js/index.js" ></script>
+    <script src="../js/index.js" ></script>
 
 
   </body>
