--- a/html/load.html
+++ b/html/load.html
@@ -2,7 +2,7 @@
 <html>
 	<head>
 		<link rel="stylesheet" href="../styles/main.css">
-		<script src="../js/loader.js"></script>
+		<script src="../js/menu_controller.js"></script>
 		<title> My first game - Load </title>
 	</head>
 	<body>
@@ -14,7 +14,7 @@
 				</button>
 			</div>
 		</div>
-		<a class="menu-object" href="../">GoToMenu</a>
+		<a class="menu-object" href="../index.html">GoToMenu</a>
 	</body>
 	<script src="https://cdn.jsdelivr.net/npm/vue@2.6.14"></script>
 	<script src="../js/load.js"></script>
