--- a/index.html
+++ b/index.html
@@ -24,9 +24,14 @@
 		<button class="menu-object" onclick="load()"> 
 			Carregar 
 		</button>
-		<button class="menu-object" onclick="options()"> 
+		<!-- <button class="menu-object" onclick="options()"> 
 			Opcions 
+		</button> -->
+
+		<button class="menu-object" onclick="hud()"> 
+			hud_prueba 
 		</button>
+		
 		<button class="menu-object" onclick="exit()"> 
 			Sortir 
 		</button>
