--- a/html/hud.html
+++ b/html/hud.html
@@ -5,7 +5,7 @@
 		<script src="//cdn.jsdelivr.net/npm/phaser@3.55.2/dist/phaser.js"></script>
 		<script src="../js/loader.js"></script>
 		<script src="../js/sceneHUD/hud.js"></script>
-	    <!-- <script src="../js/scene3/phasergame_controller.js"></script> -->
+	    <script src="../js/sceneHUD/hud_controller.js"></script>
 		<title> HUD scene </title>
 	</head>
 	<body>
