--- a/html/phasergame.html
+++ b/html/phasergame.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html> 
 <html>
 	<head>
-		<link rel="stylesheet" href="../styles/main.css">
+		<link rel="stylesheet" href="../main.css">
 		<script src="//cdn.jsdelivr.net/npm/phaser@3.55.2/dist/phaser.js"></script>
 		<script src="../js/loader.js"></script>
 		<script src="../js/scene1/game.js"></script>
@@ -10,6 +10,20 @@
 	</head>
 	<body>
 		<div id = "game_area"> </div>
+		<p class="menu-object" id="title">Is playing {{username}}</p>
+			<p class="menu-object" id="title" v-if="score_text <= 0"> You Lose </p>
+			<p class="menu-object" id="title" v-else-if="potis <= 0">
+				You WIN!!! with {{score_text}} points
+			</p>
+			<div v-else>
+				
+				<button class="menu-object" v-on:click="save"> Save </button>
+			</div>
+		</div>
+		<a class="menu-object" href="../">GoToMenu</a>
+	</body>
+	<script src="https://cdn.jsdelivr.net/npm/vue@2.6.14"></script>
+	<script src="../js/game_controller.js"></script>
 	</body>
 </html>
 
