--- a/html/puntuacions.html
+++ b/html/puntuacions.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html> 
 <html>
 	<head>
-		<link rel="stylesheet" href="../styles/main.css">
+		<link rel="stylesheet" href="../main.css">
 		
 		<script src="../js/puntuacions.js"></script>
 		
