--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
 			Opcions 
 		</button> -->
 
-		<button class="menu-object" onclick="hud()"> 
-			hud_prueba 
+		<button class="menu-object" onclick="pause()"> 
+			pause_prueba 
 		</button>
 		
 		<button class="menu-object" onclick="exit()"> 
