hud2 final beta

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 			Opcions 
 		</button> -->
 
-		<button class="menu-object" onclick="pause()"> 
+		<button class="menu-object" onclick="hud2()"> 
 			pause_prueba 
 		</button>
 		
