--- a/html/option.html
+++ b/html/option.html
@@ -2,7 +2,7 @@
 <html>
 	<head>
 		<link rel="stylesheet" href="../Animal-Expirement/main2.css">
-		<script src="/js/loader.js"></script>
+		<script src="../Animal-Expirement/js/loader.js"></script>
 		<title> My first game - Options </title>
 	</head>
 	<body>
