--- a/html/option.html
+++ b/html/option.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html> 
 <html>
 	<head>
-		<link rel="stylesheet" href="./Animal-Expirement/main2.css">
-		<script src="./Animal-Expirement/js/loader.js"></script>
+		<link rel="stylesheet" href="../main2.css">
+		<script src="../js/loader.js"></script>
 		<title> My first game - Options </title>
 	</head>
 	<body>
