--- a/html/load.html
+++ b/html/load.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html> 
 <html>
 	<head>
-		<link rel="stylesheet" href="../main2.css">
+		<link rel="stylesheet" href="../main.css">
 		<script src="../js/loader.js"></script>
 		<title> My first game - Load </title>
 	</head>
