--- a/html/game.html
+++ b/html/game.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html> 
 <html>
 	<head>
-		<link rel="stylesheet" href="./Animal-Expirement/main.css">
+		<link rel="stylesheet" href="../styles/main.css">
 		<script src="../js/loader.js"></script>
 		<title> My first game - Game </title>
 	</head>
