--- a/html/phasergame.html
+++ b/html/phasergame.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html> 
 <html>
 	<head>
-		<link rel="stylesheet" href="../main.css">
+		<link rel="stylesheet" href="../styles/main.css">
 		<script src="//cdn.jsdelivr.net/npm/phaser@3.55.2/dist/phaser.js"></script>
 		<script src="../js/loader.js"></script>
 		<script src="../js/scene1/game.js"></script>
@@ -10,10 +10,6 @@
 	</head>
 	<body>
 		<div id = "game_area"> </div>
-		
-	</body>
-	<script src="https://cdn.jsdelivr.net/npm/vue@2.6.14"></script>
-	<script src="../js/game_controller.js"></script>
 	</body>
 </html>
 
